smoother ui, alpha rental_slot->reservation flow

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -41,15 +41,15 @@ template(name='nav')
                     a.icon.item.set_shop(href='/m/shop' class="{{isActivePath '/m/shop'}}" title='shop')
                         //- +i name='shop'
                         i.shop.icon
-                        .mobile.hidden &nbsp; Shop
-                    a.icon.item.set_library(href='/m/library' class="{{isActivePath '/m/library'}}" title='library')
-                        //- +i name='library'
-                        i.library.icon
                         .mobile.hidden &nbsp; Library
-                    a.icon.item.set_event(href='/m/event' class="{{isActivePath '/m/event'}}" title='events')
-                        //- +i name='calendar'
-                        i.calendar.icon
-                        .mobile.hidden &nbsp; Events
+                    //- a.icon.item.set_library(href='/m/library' class="{{isActivePath '/m/library'}}" title='library')
+                    //-     //- +i name='library'
+                    //-     i.library.icon
+                    //-     .mobile.hidden &nbsp; Library
+                    //- a.icon.item.set_event(href='/m/event' class="{{isActivePath '/m/event'}}" title='events')
+                    //-     //- +i name='calendar'
+                    //-     i.calendar.icon
+                    //-     .mobile.hidden &nbsp; Events
                     a.icon.item.set_meal(href='/m/meal' class="{{isActivePath '/m/meal'}}" title='food')
                         //- +i name='food'
                         i.food.icon
