--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -2,7 +2,7 @@ template(name='login')
     .ui.padded.stackable.grid
         .centered.row
             .ten.wide.column
-                h1.ui.center.aligned.grey.header gold run online
+                h1.ui.center.aligned.grey.header Gold Run Online
                     //- i.massive.icons
                     //-     i.home.icon
                     //-     i.corner.right.chevron.icon
@@ -10,20 +10,21 @@ template(name='login')
                     h4.ui.center.aligned.header #{message}
                 .ui.fluid.large.input(class=login_class)
                     .ui.inline.small.grey.header 
-                        +i name='user'
-                        |username
+                        //- +i name='user'
+                        i.user.icon
+                        |Username
                     input.username(type='text')
                 .ui.fluid.large.input(class=login_class)
                     .ui.inline.small.grey.header 
-                        +i name='lock'
-                        | password
+                        i.lock.icon
+                        | Password
                     input.password(type='password')
                 //- if username
                 if logging_in
                     .ui.fluid.big.basic.button.enter(title="login #{username}" class=enter_class)
-                        //- i.sign.in.alternate.icon
-                        +i name='enter-2' classes='ui mini inline image'
-                        |login
+                        i.sign.in.alternate.icon
+                        //- +i name='enter-2' classes='ui mini inline image'
+                        |Login
                         | #{username}
                         //- i.right.chevron.icon
                 else
@@ -31,15 +32,15 @@ template(name='login')
                         .ui.center.aligned.segment
                             .ui.small.header no '#{username}' user
                             a.ui.basic.button(href='/register')
-                                //- i.user.plus.icon
-                                +i name='enter-2' classes='ui mini inline image'                    
-                                | register
+                                i.user.plus.icon
+                                //- +i name='enter-2' classes='ui mini inline image'                    
+                                | Register
                 .ui.center.aligned.basic.segment    
                     a.ui.large.basic.button(href='/forgot_password')
                         +i name='forgot-password' classes='ui mini inline image'                    
-                        //- i.refresh.icon
-                        |forgot password
+                        i.refresh.icon
+                        |Forgot Password
                     a.ui.large.basic.button(href='/register') 
-                        +i name='add-user-male' classes='ui mini inline image'                    
-                        //- i.user.plus.icon
-                        |register
+                        //- +i name='add-user-male' classes='ui mini inline image'                    
+                        i.user.plus.icon
+                        |Register
