--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -37,7 +37,7 @@ template(name='login')
                                 | Register
                 .ui.center.aligned.basic.segment    
                     a.ui.large.basic.button(href='/forgot_password')
-                        +i name='forgot-password' classes='ui mini inline image'                    
+                        //- +i name='forgot-password' classes='ui mini inline image'                    
                         i.refresh.icon
                         |Forgot Password
                     a.ui.large.basic.button(href='/register') 
