--- a/components/rent.jade
+++ b/components/rent.jade
@@ -2,9 +2,9 @@ template(name='rentals')
     .ui.header Rentals
     unless is_author
         +view_rental
-    .ui.green.button.rent Rent
+    //- .ui.green.button.rent Rent
     .ui.celled.grid
-        .three.column.row
+        .four.column.row
             each upcoming_days
                 .column
                     +upcoming_day data=this
@@ -15,27 +15,37 @@ template(name='upcoming_day')
         //- .ui.header res slot exists
         +reservation_slot_template
     else
-        .ui.button.new_slot
-            |New Slot
+        if is_product_author
+            .ui.button.new_slot
+                |New Slot
         
 template(name='reservation_slot_template')
-    with slot
-        .ui.header $#{price}
-        unless rented
-            +boolean_edit key='prepaid' direct=true
-            +number_edit key='price' direct=true
-            +remove_button
-        //- +rental
+    if is_grandparent_author
+        with slot
+            .ui.header $#{price}
+            unless reservation
+                +boolean_edit key='prepaid' direct=true
+                +number_edit key='price' direct=true
+                +remove_button
+            //- +rental
+    unless is_grandparent_author
         .ui.divider
         .ui.header #{price}
-        +boolean_edit key='rented' direct=true
-        .ui.green.button.rent_item Rent Item
+        //- +boolean_edit key='rented' direct=true
         if reservation
-            +reservation_template
+            with reservation
+                +reservation_template
+        else
+            .ui.green.button.rent_item Rent Item
             
 template(name='reservation_template')        
-    .ui.header reservation
-    +remove_button
+    .ui.segment
+        .ui.header Reservation
+        +author_info
+        .ui.small.header #{_author_username}
+        if is_author
+            +text_edit key='notes' direct=true
+            +remove_button
     
             
 template(name='view_rental')            
