init credit page, improved reservation actions flow (mark delivery started), reservation slot improvements

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -2,8 +2,8 @@ template(name='comments')
     .ui.fluid.styled.accordion
         .active.title
             .ui.grey.header
-                //- i.chat.icon
-                +i name='chat'
+                i.chat.icon
+                //- +i name='chat'
                 |Comments
         .active.content
             if currentUser
