--- a/client/shop.jade
+++ b/client/shop.jade
@@ -61,11 +61,52 @@ template(name='shop_card')
             //-     .hidden.content
             //-         i.cart.plus.green.large.icon
             if rentable
-                .ui.small.grey.header $#{daily_rate}/day
+                .ui.small.inline.header
+                    i.clock.grey.small.icon
+                    |$#{daily_rate}/day
+                div
             //- if hourly_rate
             //-     .ui.header $#{hourly_rate}/hour
             //- unless rentable
-            .ui.header $#{dollar_price}
+            .ui.inline.header 
+                i.shop.grey.small.icon
+                |$#{dollar_price}
+            div
+            i.grey.marker.icon
+            each location_tags
+                .ui.small.basic.label #{this}
+            div
+            .ui.small.inline.header(title='completed transactions') 
+                i.grey.checkmark.icon
+                if completed_transaction_amount
+                    |#{completed_transaction_amount} 
+                else 
+                    |0
+            div
+            div
+            .ui.small.inline.header(title='comments') 
+                i.grey.chat.icon
+                if chat_message_amount
+                    |#{chat_message_amount} 
+                else 
+                    |0
+            div
+            .ui.small.inline.header(title='likes') 
+                i.grey.thumbs.up.icon
+                if likes
+                    |#{likes} 
+                else 
+                    |0
+            div
+            div
+            .ui.small.inline.header(title='dislikes') 
+                i.grey.thumbs.down.icon
+                if dislikes
+                    |#{dislikes} 
+                else 
+                    |0
+            div
+            +fav_button
             //- .ui.basic.animated.fade.button.add_to_cart(title="click to add to cart")
             //-     .visible.content
             //-         .ui.header 
@@ -89,52 +130,96 @@ template(name='shop_card')
         //-         .ui.header #{sales_amount} sales
         //-         .ui.header #{purchase_amount} purchases
             
+            
+template(name='fav_button')
+    i.large.link.heart.outline.icon
+            
+            
 
 template(name='shop_edit')
     with current_doc
         .ui.stackable.padded.grid
-            .eight.wide.column
-                .ui.inline.header #{title}
-                a.ui.large.basic.icon.button(href="/shop/#{_id}/view")
-                    i.big.green.checkmark.icon
-                .ui.large.basic.icon.button.delete_shop_item
-                    i.big.red.remove.icon
-                +text_edit key='title' icon='header' direct=true
-                +array_edit key='tags' icon='tags' direct=true
-                +array_edit key='location_tags' label='location tags' icon='marker' direct=true
-                +dollar_price_edit key='dollar_price' icon='money' label='dollar price' direct=true
-                +boolean_edit key='active' icon='clock' label='active' direct=true
-                +text_edit key='model' icon='cube' label='model' direct=true
-                +number_edit key='inventory' icon='move-by-trolley' label='inventory' direct=true
-                +date_edit key='date_available' icon='calendar' label='date available' direct=true
-                +time_edit key='time_available' icon='clock' label='time available' direct=true
-                +single_doc_edit key='shop_type' ref_model='shop_type' label='shop type' direct=true
-                //- +omega_edit model='shop_type'
-                if is_event
-                    .ui.header 
-                        +i name='calendar'
-                        |event
-                    +date_edit key='date' label='date' direct=true
-                    +time_edit key='start_time' label='start time' direct=true
-                    +time_edit key='end_time' label='end time' direct=true
-                else if is_service
-                    .ui.header service
-                    +number_edit key='hourly_rate' direct=true
-                else if is_product
-                    .ui.header product
-                    +boolean_edit key='rentable' direct=true
-                    unless rentable
-                        +boolean_edit key='food' direct=true
-                        if food
-                            +array_edit key='ingredients' direct=true
-                            +array_edit key='allergies' direct=true
-                    if rentable
-                        +number_edit key='hourly_rate' label='hourly rate' icon='time-span' direct=true
-                        +number_edit key='daily_rate' label='daily rate' icon='timetable' direct=true
-            .eight.wide.column
-                +image_edit key='picture' direct=true
-                +html_edit key='description' direct=true
+            .three.column.row
+                .column
+                    .ui.inline.header #{title}
+                    a.ui.large.basic.icon.button(href="/shop/#{_id}/view")
+                        i.big.green.checkmark.icon
+                    .ui.large.basic.icon.button.delete_shop_item
+                        i.big.red.remove.icon
+                    +text_edit key='title' icon='header' direct=true
+                    +array_edit key='tags' icon='tags' direct=true
+                    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                    +text_edit key='delivery_instructions' icon='truck' label='delivery instructions' direct=true
+                    //- +boolean_edit key='active' icon='clock' label='active' direct=true
+                    //- +text_edit key='model' icon='cube' label='model' direct=true
+                    +number_edit key='inventory' icon='move-by-trolley' label='inventory' direct=true
+                    +date_edit key='date_available' icon='calendar' label='date available' direct=true
+                    +time_edit key='time_available' icon='clock' label='time available' direct=true
+                    +single_doc_edit key='shop_type' ref_model='shop_type' label='shop type' direct=true
+                    //- +omega_edit model='shop_type'
+                    if is_event
+                        .ui.header 
+                            i.calendar.icon
+                            |event
+                        +date_edit key='date' label='date' direct=true
+                        +time_edit key='start_time' label='start time' direct=true
+                        +time_edit key='end_time' label='end time' direct=true
+                    else if is_service
+                        .ui.header service
+                        +number_edit key='hourly_rate' direct=true
+                    else if is_product
+                        .ui.header product
+                        +boolean_edit key='for_sale' label='for sale' direct=true
+                        if for_sale
+                            +dollar_price_edit key='dollar_price' icon='money' label='dollar price' direct=true
+                        +boolean_edit key='rentable' direct=true
+                        unless rentable
+                            +boolean_edit key='food' direct=true
+                            if food
+                                +array_edit key='ingredients' direct=true
+                                +array_edit key='allergies' direct=true
+                        if rentable
+                            +number_edit key='hourly_rate' label='hourly rate' icon='time-span' direct=true
+                            +number_edit key='daily_rate' label='daily rate' icon='timetable' direct=true
+                .column
+                    +image_edit key='picture' direct=true
+                    +html_edit key='description' direct=true
+                .column
+                    .ui.header
+                        i.truck.icon
+                        |delivery options
+                    +boolean_edit key='pickup_delivery' label='pickup' direct=true
+                    +boolean_edit key='home_dropoff_delivery' label='home dropoff' direct=true
+                    +boolean_edit key='building_dropoff_delivery' label='building dropoff' direct=true
+                    +boolean_edit key='healthclub_drop_off_delivery' label='health club drop off' direct=true
+
+                    .ui.list
+                        .ui.header pickup
+                        .ui.header home dropoff
+                        .ui.header health club drop off
+                    .ui.header pricing options options
+                    +boolean_edit key='cash_accepted' label='cash accepted' direct=true
+                    +boolean_edit key='prepay' label='prepayment required' direct=true
+                    +boolean_edit key='security_deposit_required' label='secuirty depoist requiired' direct=true
+                    if security_deposit_required
+                        +number_edit key='security_deposit_amount' label='security deposit amount' icon='dollar'
+                    .ui.header pricing planning determination options
+                    +boolean_edit key='friend_discount' label='friend discount' direct=true
+                    if friend_discount
+                        +number_edit key='security_deposit_amount' label='security deposit amount' icon='dollar'
+                    .ui.header
+                        i.grey.eye.icon
+                        | privacy options
+                    .ui.small.header visibility
+                    +boolean_edit key='visible_to_friends' label='visible to friends' direct=true
+                    +boolean_edit key='visible_to_friends' label='visible to friends' direct=true
+                    +boolean_edit key='visible_to_building' label='visible to building' direct=true
+                    +boolean_edit key='visible_to_residents' label='visible to residents' direct=true
+                    .ui.divider
+                    +boolean_edit key='published' label='published' direct=true
+                        
                 
+                    
 
 
         
@@ -150,45 +235,91 @@ template(name='shop_view_layout')
         .ui.stackable.padded.grid
             //- img.ui.large.rounded.image(src="{{c.url image width=500 height=500 gravity='face' crop='fill'}}")
             .row
-                .five.wide.column
+                .sixteen.wide.column
                     .ui.center.aligend.large.header #{title}
-                    img.ui.centered.small.image(src="{{c.url picture width=1000 height=400 crop='fit'}}")
+            .row
+                .four.wide.column
+                    img.ui.centered.image(src="{{c.url picture width=1000 height=400 crop='fit'}}")
                     if can_edit
                         a.ui.fluid.button(href="/shop/#{_id}/edit")
                             i.cog.icon
-                            |Edit
-                    .ui.large.vertical.fluid.menu
-                        a.item(href="/shop/#{_id}/info")
-                            |Info
-                            i.info.icon
-                        if hourly_rate
-                            a.item(href="/shop/#{_id}/rentals")
-                                |Rentals
-                                i.clock.icon
-                        a.item(href="/shop/#{_id}/chat")
-                            |Chat
-                            i.chat.icon
-                        a.item(href="/shop/#{_id}/earnings")
-                            |Earnings
-                            i.money.icon
-                        a.item(href="/shop/#{_id}/stats")
-                            |Stats
-                            i.line.chart.icon
+                            |edit
+                    //- .ui.large.vertical.fluid.menu
+                    //-     a.item(href="/shop/#{_id}/info")
+                    //-         |info
+                    //-         i.info.icon
+                    //-     if hourly_rate
+                    //-         a.item(href="/shop/#{_id}/rentals")
+                    //-             |rentals
+                    //-             i.clock.icon
+                    //-     a.item(href="/shop/#{_id}/chat")
+                    //-         |chat
+                    //-         i.chat.icon
+                    //-     a.item(href="/shop/#{_id}/earnings")
+                    //-         |earnings
+                    //-         i.money.icon
+                    //-     a.item(href="/shop/#{_id}/stats")
+                    //-         |stats
+                    //-         i.line.chart.icon
                     .ui.header added by #{_author_username}
                     |#{when}
                     with _author_id
                         +user_card
                     +array_view key='tags' icon='tags' direct=true
-                    //- +array_view key='location_tags' label='location tags' icon='marker' direct=true
+                    +array_view key='location_tags' label='location tags' icon='marker' direct=true
+                    //- +text_view key='location' icon='marker' label='location description' direct=true
+
                     +number_view key='inventory' label='inventory' icon='move-by-trolley' direct=true
                     //- +dollar_price_view key='dollar_price' icon='money' label='dollar price' direct=true
                     +date_view key='date_available' label='date available' icon='calendar' direct=true
                     +time_view key='time_available' label='time available' icon='clock' direct=true
                         
-                    +voting_full            
-                .eleven.wide.column
+                .eight.wide.column
                     +yield
-                    
+                .four.wide.column
+                    .ui.big.green.fluid.button.add_to_cart 
+                        i.cart.plus.icon
+                        |add to cart
+                    +voting_full     
+                    .ui.basic.segment
+                        .ui.small.header
+                            i.grey.truck.icon
+                            |delivery instructions
+                        |#{delivery_instructions}      
+                    .ui.header
+                        i.truck.icon
+                        |delivery options
+                    +boolean_view key='pickup_delivery' label='pickup' direct=true
+                    +boolean_view key='home_dropoff_delivery' label='home dropoff' direct=true
+                    +boolean_view key='building_dropoff_delivery' label='building dropoff' direct=true
+                    +boolean_view key='healthclub_drop_off_delivery' label='health club drop off' direct=true
+
+                    .ui.list
+                        .ui.header pickup
+                        .ui.header home dropoff
+                        .ui.header health club drop off
+                    .ui.header pricing options options
+                    +boolean_view key='cash_accepted' label='cash accepted' direct=true
+                    +boolean_view key='prepay' label='prepayment required' direct=true
+                    +boolean_view key='security_deposit_required' label='secuirty depoist requiired' direct=true
+                    if security_deposit_required
+                        +number_view key='security_deposit_amount' label='security deposit amount' icon='dollar'
+                    .ui.header pricing planning determination options
+                    +boolean_view key='friend_discount' label='friend discount' direct=true
+                    if friend_discount
+                        +number_view key='security_deposit_amount' label='security deposit amount' icon='dollar'
+                    .ui.header
+                        i.grey.eye.icon
+                        | privacy options
+                    .ui.small.header visibility
+                    +boolean_view key='visible_to_friends' label='visible to friends' direct=true
+                    +boolean_view key='visible_to_friends' label='visible to friends' direct=true
+                    +boolean_view key='visible_to_building' label='visible to building' direct=true
+                    +boolean_view key='visible_to_residents' label='visible to residents' direct=true
+                    .ui.divider
+                    +boolean_view key='published' label='published' direct=true
+                         
+    +footer                
 template(name='shop_stats')
     +product_transactions
 
@@ -199,9 +330,11 @@ template(name='shop_rentals')
 template(name='shop_chat')                        
     +comments
                     
-template(name='shop_info')                        
-    +rentals    
+template(name='shop_info')    
+    if rentable                    
+        +rentals    
     +html_view key='description' direct=true
+    +comments
     if food
         +reservations
     .row
